@@ -2,6 +2,57 @@
 ## JVM调优相关
 内存分析工具MAT(Memory Analyzer Tool)
 
+
+
+
+
+建立一套同JVM参数模板，设置一些常见的参数，稀奇古怪的拉七八糟的参数不要设置
+## 一份JVM参数设置模板(4C8G)
+```
+-Xms4096M
+-Xmx4096M
+-Xmn3072M
+-Xss1M
+-XX:MetaspaceSize=256M
+-XX:MaxMetaspaceSize=256M
+-XX:+UseParNewGC
+-XX:+UseConcMarkSweepGC
+-XX:CMSInitiatingOccupancyFaction=92
+-XX:+UseCMSCompactAtFullCollection
+-XX:CMSFullGCsBeforeCompaction=0
+-XX:+CMSParallelInitialMarkEnabled
+-XX:+CMSScavengeBeforeRemark
+-XX:+DisableExplicitGC
+-XX:+PrintGCDetails
+-Xloggc:gc.log (可以不要)
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:HeapDumpPath=/usr/local/app/oom
+```
+
+
+
+
+
+* QPS：每秒多少个请求
+* TPS: 每秒的事务量，一般用于数据库层面
+
+* 启动参数中建议要加的
+```
+-XX:+DisableExplicitGC
+-XX:CMSFullGCsBeforeCompaction=0  强制让CMS收集器每次FullGC之后整理老年代的碎片
+-XX:CMSScavengeBeforeRemark 让CMS收集器在FullGC之前强制做一个MinorGC
+-XX:+HeapDumpOnOutOfMemoryError  发生OOM时自动dump二进制文件
+-XX:HeapDumpPath=/usr/local/app/oom 
+
+
+```
+
+
+
+
+
+
+
 ```
 -Xms10m
 -Xmx10m
@@ -16,9 +67,110 @@
 
 
 
+
 ```
 
 * 获得堆转储文件  jmap -dump:format=b,file=<dumpfile.hprof> <pid>
+
+元数据空间解析
+used:加载类的空间量；capacity:当前分配块的元数据的空间；committed:空间块的数量；reserved:元数据的空间保留（但不一定提交的量）
+
+
+
+## 实战调优
+
+
+## 将java文件打成jar包
+javac Demo1.java
+jar cvf Demo1.jar Demo1.class
+
+
+
+### 实现YoungGC
+```
+// 参数设置
+-XX:NewSize=5242880
+-XX:MaxNewSize=5242880
+-XX:InitialHeapSize=10485760
+-XX:MaxHeapSize=10485760
+-XX:SurvivorRatio=8
+-XX:PretenureSizeThreshold=10485760
+-XX:+UseParNewGC
+-XX:+UseConcMarkSweepGC
+-XX:+PrintGCDetails
+-XX:+PrintGCTimeStamps
+-Xloggc:gc.log
+
+```
+
+
+
+### 对象由新生代进入老年代
+```
+// 参数设置
+-XX:NewSize=10485760
+-XX:MaxNewSize=10485760
+-XX:InitialHeapSize=20971520
+-XX:MaxHeapSize=20971520
+-XX:SurvivorRatio=8
+-XX:MaxTenuringThreshold=15
+-XX:PretenureSizeThreshold=10485760
+-XX:+UseParNewGC
+-XX:+UseConcMarkSweepGC
+-XX:+PrintGCDetails
+-XX:+PrintGCTimeStamps
+-Xloggc:gc2.log
+
+```
+
+### 对象由新生代进入老年代
+```
+// 参数设置
+-XX:NewSize=104857600
+-XX:MaxNewSize=104857600
+-XX:InitialHeapSize=209715200
+-XX:MaxHeapSize=209715200
+-XX:SurvivorRatio=8
+-XX:MaxTenuringThreshold=15
+-XX:PretenureSizeThreshold=3145728
+-XX:+UseParNewGC
+-XX:+UseConcMarkSweepGC
+-XX:+PrintGCDetails
+-XX:+PrintGCTimeStamps
+-Xloggc:gc3.log
+
+jstat -gc 7268 1000 1000
+```
+
+
+### 实战命令
+```
+jstat -gc PID
+
+每秒钟打印一次，可以分析每秒钟系统会新增多少对象，一共统计10次
+jstat -gc PID 1000 10 
+
+jmap -heap PID
+jmap -histo PID 了解系统运行时的对象分布
+生成堆内存数据
+jmap -dump:live,format=b,file=dump.hprof PID
+jhat dump.hprof -port 7000 在浏览器中分析堆转出快照
+
+
+
+
+
+
+
+
+```
+
+
+
+
+
+
+
 
 
 ### java性能调优的七种武器
@@ -40,4 +192,3 @@ https://www.cnblogs.com/AloneSword/p/3821569.html
 ### 简介
 JVM从软件层面屏蔽不同操作系统在底层硬件和指令上的区别
 
-#### JVM指令
